--- a/coursera-angular-module4/data.template.html
+++ b/coursera-angular-module4/data.template.html
@@ -1,7 +1,6 @@
 <div id="items" ng-controller='DataController as dataCtrl'>
-    <a ui-sref="home">Home</a> &lt; <span>Category</span> &lt; <span>Item</span>
+    <a ui-sref="home">Home</a> &lt; <a ui-sref="categories">Categories</a> &lt; <span>Item</span>
     <h3>Item</h3>
-
     <ul>
         <li ng-repeat="item in dataCtrl.items">
             <strong>Name:</strong> {{item.name}}
