--- a/coursera-angular-module4/index.html
+++ b/coursera-angular-module4/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body ng-app="menuApp">
+<body ng-app="menuApp" ng-controller="MenuAppController">
 <h1>Restaurant</h1>
 <ui-view></ui-view>
 
@@ -15,14 +15,14 @@
 
 <script src="menuapp.module.js"></script>
 <script src="data.module.js"></script>
-<script src="data.controller.js"></script>
 
 <script src="routes.js"></script>
+<script src="menuapp.controller.js"></script>
 
 <!--place artifacts here -->
 <script src="categories.component.js"></script>
 <script src="data.service.js"></script>
-<script src="menuapp.controller.js"></script>
+<script src="data.controller.js"></script>
 
 </body>
 </html>
