--- a/coursera-angular-module4/menuapp.template.html
+++ b/coursera-angular-module4/menuapp.template.html
@@ -1,5 +1,5 @@
 <div id="list" ng-controller='MenuAppController as mainList'>
-    <a ui-sref="home">Home</a> &lt; <span>List</span>
+    <a ui-sref="home">Home</a> &lt; <span>Categories</span>
     <h3>Categories</h3>
     <categories items="mainList.items"></categories>
 </div>
